--- a/apps/docs/src/content/docs/getting-started/overview.mdx
+++ b/apps/docs/src/content/docs/getting-started/overview.mdx
@@ -6,7 +6,7 @@ description: Get started with useFlow - the type-safe way to build multi-step fl
 import { Tabs, TabItem, Aside, LinkCard, CardGrid, Badge } from '@astrojs/starlight/components';
 import { REPO_ISSUES_URL } from '../../../constants';
 
-useFlow is a declarative, type-safe library for building multi-step flows in React with **built-in persistence and analytics**. Whether you're building onboarding, checkout, surveys, or wizards, useFlow eliminates the complexity while providing exceptional developer experience.
+useFlow is a declarative, type-safe library for building multi-step flows in React with **built-in persistence**. Whether you're building onboarding, checkout, surveys, or wizards, useFlow eliminates the complexity while providing exceptional developer experience.
 
 ## Quick example
 
@@ -68,7 +68,7 @@ function App() {
 
 ⚡ **Zero Dependencies** - Under 5KB gzipped, no external dependencies
 
-📊 **Analytics Ready** - Built-in hooks for tracking user journeys
+📊 **Analytics Ready** - Hooks for tracking user journeys with your analytics platform
 
 ## Installation
 
