feat(docs): udpate copy

--- a/apps/docs/src/content/docs/getting-started/installation.mdx
+++ b/apps/docs/src/content/docs/getting-started/installation.mdx
@@ -48,7 +48,6 @@ Install useFlow using your preferred package manager.
 useFlow works with modern React versions:
 
 - **React** `^18.0.0` or `^19.0.0`
-- **React DOM** `^18.0.0` or `^19.0.0` (for web applications)
 - **TypeScript** `^5.0.0` (optional, but recommended)
 
 ## TypeScript support
@@ -57,8 +56,8 @@ useFlow is written in TypeScript and includes type definitions out of the box. N
 
 ## Next steps
 
-Ready to build your first flow? Check out the [Quick Start](/getting-started/quick-start) guide to create a working onboarding flow in 5 minutes.
+Check out the [Quick Start](/getting-started/quick-start) guide to create a working onboarding flow in 5 minutes.
 
 Other resources:
-- [TypeScript](/getting-started/typescript) - Learn about type safety
+- [TypeScript](/getting-started/typescript) - Get full type safety for your flows
 - [Core Concepts](/core-concepts/) - Understand flows, steps, and context
