--- a/apps/docs/src/content/docs/getting-started/why-useflow.mdx
+++ b/apps/docs/src/content/docs/getting-started/why-useflow.mdx
@@ -284,15 +284,9 @@ function ProfileStep() {
 - **useFlow:** Handles step navigation, flow persistence, shared context
 - **Together:** Complete multi-step form solution with data flowing between steps
 
-## Quick start
+## Ready to get started?
 
-Ready to simplify your flows?
-
-```bash
-npm install @useflow/react
-```
-
-Then follow our [5-minute quick start](/getting-started/quick-start) to build your first flow.
+Follow our [quick start guide](/getting-started/quick-start) to build your first flow in 5 minutes.
 
 ## Next steps
 
